--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
       <title>Taylor Bailey | Resume</title>
-      <link rel="stylesheet" href="../styles/style.css">
+      <link rel="stylesheet" href="taylorbailey97.github.io/style.css">
   </head>
   <body>
       <header id="about">
