--- a/CIT 230/basicpage.html
+++ b/CIT 230/basicpage.html
@@ -11,6 +11,7 @@
     <h2>My location: Rexburg, Idaho</h2>
     <p>My system RAM: 16GB</p>
     <p>This is a change</p>
+    <p>This is another change</p>
     <p> <img src="images/My%20photo.jpg" height="250" width="200" alt="Profile picture"></p>
     <p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
 </body>
