--- a/CIT 230/assignments.html
+++ b/CIT 230/assignments.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
+   <header>
+        <nav>
+            <a href="basicpage.html">Home</a> 
+            <a href="assignments.html">School page</a>
+            <a href="resume.html">Resume</a>
+        </nav>
+    </header>
     <script src=""></script>
 </body>
 </html>
