--- a/CIT 230/assignments.html
+++ b/CIT 230/assignments.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="styles/main.css">
+    <style>
+        p {
+            color:black;
+        }
+        
+    </style> 
 </head>
 
 <body>
    <header>
-        <nav>
+        <!--<nav>
             <a href="basicpage.html">Home</a> 
             <a href="assignments.html">School page</a>
             <a href="resume.html">Resume</a>
-        </nav>
+        </nav>-->
     </header>
+    <p class="content-wrap">Where is all my words at?<input type="checkbox" unchecked></p>
     <script src=""></script>
 </body>
 </html>
