Assignment page done, small changes elsewhere.

--- a/CIT 230/assignments.html
+++ b/CIT 230/assignments.html
@@ -3,25 +3,83 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>CIT 230 | assignments</title>
     <link rel="stylesheet" href="styles/main.css">
-    <style>
-        p {
-            color:black;
-        }
-        
-    </style> 
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
 </head>
 
 <body>
    <header>
-        <!--<nav>
+        <nav>
             <a href="basicpage.html">Home</a> 
             <a href="assignments.html">School page</a>
             <a href="resume.html">Resume</a>
-        </nav>-->
+        </nav>
     </header>
-    <p class="content-wrap">Where is all my words at?<input type="checkbox" unchecked></p>
-    <script src=""></script>
+    <section class="assignments">
+    <div class="content-wrap">
+    <h2>CIT 270</h2>
+    <h3>Homework links</h3>
+    <div class="blocking-small">
+    <ul>
+        <li>Lesson 1:
+        <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View">Required Readings</a></li>
+        </ul> 
+        </li>
+    </ul>
+    <ul>
+        <li>Lesson 2:
+        <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View">Required Readings</a></li>
+        </ul>
+        </li>
+    </ul>
+    <ul>
+       <li>Lesson 3:
+       <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View">Required Readings</a></li>
+       </ul>
+       </li>
+    </ul>
+        </div>
+    <div class="blocking-large">
+    <ul>
+        <li>Lesson 4:
+        <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View">Required Readings</a></li>
+        </ul> 
+        </li>
+    </ul>
+    <ul>
+        <li>Lesson 5:
+        <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View">Required Readings</a></li>
+        </ul>
+        </li>
+    </ul>
+    <ul>
+       <li>Lesson 6:
+       <ul>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View">Required Readings</a></li>
+       </ul>
+       </li>
+    </ul>
+        </div>
+    </div>
+    </section>
 </body>
+<footer>
+   <h2>Let's keep in touch</h2>
+        <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
+        <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
+        <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
+    <p>&copy;Taylor Bailey</p>
+</footer>
 </html>
