--- a/CIT 230/resume.html
+++ b/CIT 230/resume.html
@@ -89,9 +89,11 @@
               </div>
           </section>
     <footer>
+        <h2>Let's keep in touch</h2>
         <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
         <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
         <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
+        <p>&copy;Taylor Bailey</p>
     </footer>
 </body>
 </html
