--- a/CIT 230/assignments.html
+++ b/CIT 230/assignments.html
@@ -24,24 +24,24 @@
     <ul>
         <li>Lesson 1:
         <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View">Required Readings</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View" target="_blank">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View" target="_blank">Required Readings</a></li>
         </ul> 
         </li>
     </ul>
     <ul>
         <li>Lesson 2:
         <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View">Required Readings</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View" target="_blank">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View" target="_blank">Required Readings</a></li>
         </ul>
         </li>
     </ul>
     <ul>
        <li>Lesson 3:
        <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View">Required Readings</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View" target="_blank">Overview</a></li>
+            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View" target="_blank">Required Readings</a></li>
        </ul>
        </li>
     </ul>
@@ -50,24 +50,24 @@
     <ul>
         <li>Lesson 4:
         <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View">Required Readings</a></li>
+            <li><a href="#" target="_blank">Overview</a></li>
+            <li><a href="#" target="_blank">Required Readings</a></li>
         </ul> 
         </li>
     </ul>
     <ul>
         <li>Lesson 5:
         <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View">Required Readings</a></li>
+            <li><a href="#" target="_blank">Overview</a></li>
+            <li><a href="#" target="_blank">Required Readings</a></li>
         </ul>
         </li>
     </ul>
     <ul>
        <li>Lesson 6:
        <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View">Required Readings</a></li>
+            <li><a href="#" target="_blank">Overview</a></li>
+            <li><a href="#" target="_blank">Required Readings</a></li>
        </ul>
        </li>
     </ul>
