--- a/cit230/assignments.html
+++ b/cit230/assignments.html
@@ -80,6 +80,6 @@
         <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
         <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
         <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
-    <p>&copy;Taylor Bailey</p>
+    <p>&copy;Taylor Bailey 2018</p>
 </footer>
 </html>
