--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -93,7 +93,7 @@
         <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
         <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
         <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
-        <p>&copy;Taylor Bailey</p>
+        <p>&copy;Taylor Bailey 2018</p>
     </footer>
 </body>
 </html>
