--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="basicpage.html">Home</a> 
+            <a href="index.html">Home</a> 
             <a href="assignments.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
