--- a/cit230/assignments.html
+++ b/cit230/assignments.html
@@ -18,8 +18,9 @@
     </header>
     <section class="assignments">
     <div class="content-wrap">
-    <h2>CIT 270</h2>
+    <h2 class="blocking-large">CIT 270</h2>
     <h3>Homework links</h3>
+    <img src="images/My%20photo.jpg" alt="Profile Picture" class="photoassignments blocking-small">
     <div class="blocking-small">
     <ul>
         <li>Lesson 1:
