--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -17,7 +17,7 @@
         </nav>
       <div class="content-wrap">
         <section>
-    <img src="images/My%20photo.jpg" alt="Taylor Bailey" class="photo" class="blocking-small">
+    <img src="images/My%20photo.jpg" alt="Taylor Bailey" class="photo blocking-small">
            <h1>Taylor Bailey</h1>
            <h2>Software engineering</h2>
            <p><b><u>Career focus:</u></b>Current college student with experience in Object-Oriented, and Web Development languages. Self-motivated    learner, willing and able to learn new systems and adapt with changing corporate environments. </p>
