--- a/cit230/basicpage.html
+++ b/cit230/basicpage.html
@@ -12,11 +12,11 @@
    <header>
         <nav>
             <a href="basicpage.html">Home</a> 
-            <a href="assignments.html">School page</a>
+            <a href="index.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
        <div class="content-wrap">
-          <img src="images/My%20photo.jpg" alt="Profile picture" class="photobasicpage">
+          <img src="images/Me.jpg" alt="Profile picture" class="photobasicpage">
           <h1>Taylor Bailey - student</h1>
           <h2>My location: Rexburg, Idaho</h2>
           <p>My system RAM: 16GB</p>
