--- a/cit230/index.html
+++ b/cit230/index.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
-   <header>
+   <header class="content-wrap">
+        <img src="images/Me.jpg" alt="Profile Picture">
+        <h1>Assignments page</h1>
         <nav>
             <a href="basicpage.html">Home</a> 
             <a href="assignments.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
     </header>
-    <section class="assignments">
+    <section>
     <div class="content-wrap">
-    <h2 class="blocking-large">CIT 270</h2>
+    <h2>CIT 270</h2>
     <h3>Homework links</h3>
-    <img src="images/My%20photo.jpg" alt="Profile Picture" class="photoassignments blocking-small">
-    <div class="blocking-small">
+    <div class="blocking-large">
     <ul>
         <li>Lesson 1:
         <ul>
@@ -47,7 +48,7 @@
        </li>
     </ul>
         </div>
-    <div class="blocking-large">
+    <div class="blocking-small">
     <ul>
         <li>Lesson 4:
         <ul>
@@ -81,6 +82,6 @@
         <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
         <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
         <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
-    <p>&copy;Taylor Bailey 2018</p>
+    <p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
 </footer>
 </html>
