--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <nav>
-            <a href="basicpage.html">Home</a> 
-            <a href="assignments.html">School page</a>
+            <a href="index.html">Home</a> 
+            <a href="basicpage.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
       <div class="content-wrap">
         <section>
-    <img src="images/My%20photo.jpg" alt="Taylor Bailey" class="photo blocking-small">
+    <img src="images/Me.jpg" alt="Taylor Bailey">
            <h1>Taylor Bailey</h1>
            <h2>Software engineering</h2>
            <p><b><u>Career focus:</u></b>Current college student with experience in Object-Oriented, and Web Development languages. Self-motivated    learner, willing and able to learn new systems and adapt with changing corporate environments. </p>
