meta tags added

--- a/cit230/basicpage.html
+++ b/cit230/basicpage.html
@@ -2,7 +2,8 @@
 <html lang="">
 <head>
   <meta charset="utf-8">
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <meta name="description" content="A basicpage">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
   <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
   <title>Taylor B. - A Basic Web Page</title>
