html fixed page added

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -45,6 +45,7 @@
        <ul>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View" target="_blank">Overview</a></li>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View" target="_blank">Required Readings</a></li>
+            <li><a href="fixedhtml.html">Html page fixed</a>
        </ul>
        </li>
     </ul>
