landing page fix

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Assignments for CIT 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CIT 230 | assignments</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="cit230/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
 </head>
 
 <body>
    <header class="content-wrap">
-        <img src="images/Me.jpg" alt="Profile Picture">
+        <img src="cit230/images/Me.jpg" alt="Profile Picture">
         <h1>Assignments page</h1>
         <nav>
-            <a href="basicpage.html">Home</a> 
-            <a href="assignments.html">School page</a>
-            <a href="resume.html">Resume</a>
+            <a href="cit230/basicpage.html">Home</a> 
+            <a href="cit230/index.html">School page</a>
+            <a href="cit230/resume.html">Resume</a>
         </nav>
     </header>
     <section>
@@ -44,6 +45,7 @@
        <ul>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View" target="_blank">Overview</a></li>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View" target="_blank">Required Readings</a></li>
+            <li><a href="cit230/fixedhtml.html">Html page fixed</a>
        </ul>
        </li>
     </ul>
