--- a/cit230/index.html
+++ b/cit230/index.html
@@ -15,7 +15,7 @@
         <h1>Assignments page</h1>
         <nav>
             <a href="basicpage.html">Home</a> 
-            <a href="assignments.html">School page</a>
+            <a href="index.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
     </header>
