--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a> 
-            <a href="basicpage.html">School page</a>
+            <a href="basicpage.html">Home</a> 
+            <a href="index.html">School page</a>
             <a href="resume.html">Resume</a>
         </nav>
       <div class="content-wrap">
