--- a/cit230/fixedhtml.html
+++ b/cit230/fixedhtml.html
@@ -6,7 +6,7 @@
       <style>
           .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
       </style>
-      <link rel="stylesheet" href="styles/main.css">     
+      <link rel="stylesheet" href="styles/fakemain.css">     
   </head>
 <body>
   <header>
