updated a lot of problems

--- a/cit230/resume.html
+++ b/cit230/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
@@ -14,22 +14,13 @@
 <body>
     <header>
         <nav>
-<<<<<<< HEAD
-            <a href="basicpage.html" class="border">Home</a> 
-            <a href="assignments.html" class="border">School page</a>
-=======
             <a href="basicpage.html">Home</a> 
             <a href="index.html">School page</a>
->>>>>>> 0f673f4eb9d143982661ae5d3a06fc7302b275f4
             <a href="resume.html">Resume</a>
         </nav>
       <div class="content-wrap">
         <section>
-<<<<<<< HEAD
-    <img src="images/My%20photo.jpg" alt="Taylor Bailey" class="photo">
-=======
     <img src="images/Me.jpg" alt="Taylor Bailey">
->>>>>>> 0f673f4eb9d143982661ae5d3a06fc7302b275f4
            <h1>Taylor Bailey</h1>
            <h2>Software engineering</h2>
            <p><b><u>Career focus:</u></b>Current college student with experience in Object-Oriented, and Web Development languages. Self-motivated    learner, willing and able to learn new systems and adapt with changing corporate environments. </p>
@@ -102,21 +93,12 @@
           </section>
     <footer>
         <h2>Let's keep in touch</h2>
-        <ul>
-          <li>
-            
            <i class="fas fa-envelope"></i>
            <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
-            </li>
-           <li>
               <i class="fab fa-facebook"></i>
               <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
-            </li>
-            <li>
               <i class="fab fa-twitter-square"></i>
               <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
-            </li>
-        </ul>
         <p>&copy;Taylor Bailey 2018</p>
     </footer>
 </body>
