--- a/cit230/index.html
+++ b/cit230/index.html
@@ -19,11 +19,10 @@
             <a href="resume.html">Resume</a>
         </nav>
     </header>
-    <section>
-    <div class="content-wrap">
+    
+    <section class="content-wrap">
     <h2>CIT 270</h2>
     <h3>Homework links</h3>
-    <div class="blocking-small">
     <div class="blocking-large">
     <ul>
         <li>Lesson 1:
@@ -32,16 +31,12 @@
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View" target="_blank">Required Readings</a></li>
         </ul> 
         </li>
-    </ul>
-    <ul>
         <li>Lesson 2:
         <ul>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View" target="_blank">Overview</a></li>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View" target="_blank">Required Readings</a></li>
         </ul>
         </li>
-    </ul>
-    <ul>
        <li>Lesson 3:
        <ul>
             <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View" target="_blank">Overview</a></li>
@@ -57,6 +52,7 @@
         <ul>
             <li><a href="#" target="_blank">Overview</a></li>
             <li><a href="#" target="_blank">Required Readings</a></li>
+            <li><a href="styles/fixme.css">fixed CSS</a></li>
         </ul> 
         </li>
     </ul>
@@ -77,8 +73,8 @@
        </li>
     </ul>
         </div>
-    </div>
     </section>
+    
 </body>
 <footer>
    <h2>Let's keep in touch</h2>
