--- a/cit230/index.html
+++ b/cit230/index.html
@@ -53,6 +53,7 @@
             <li><a href="#" target="_blank">Overview</a></li>
             <li><a href="#" target="_blank">Required Readings</a></li>
             <li><a href="styles/fixme.css">fixed CSS</a></li>
+            <li><a href="weatherpage/franklin.html">franklin page</a></li>
         </ul> 
         </li>
     </ul>
