link to design document

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -54,6 +54,7 @@
             <li><a href="#" target="_blank">Required Readings</a></li>
             <li><a href="styles/fixme.css">fixed CSS</a></li>
             <li><a href="weatherpage/franklin.html">franklin page</a></li>
+            <li><a href="weatherpage/links/Website%20Planning%20Document.pdf">Design Document</a></li>
         </ul> 
         </li>
     </ul>
