--- a/cit230/weatherpage/franklin.html
+++ b/cit230/weatherpage/franklin.html
@@ -22,7 +22,7 @@
                 <a href="gallery.html">Gallery</a>
             </nav>
         </header>
-        <main class="content-wrap">
+        <main>
             <h2>Franklin, ID</h2>
             <section>
                 <h3>Weather Data</h3>
@@ -42,7 +42,7 @@
             </section>
         </main>
         <footer>
-            <aside class="content-wrap">
+            <aside>
                 <p class="footer-bar">&copy;Taylor Bailey  |  Day Out Weather  |  <span id="currentdate">May 2018</span></p>
             </aside>
         </footer>
