franklin page update

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -63,6 +63,7 @@
         <ul>
             <li><a href="#" target="_blank">Overview</a></li>
             <li><a href="#" target="_blank">Required Readings</a></li>
+            <li><a href="lesson-5/weatherpage/franklin.html">Franklin Page</a></li>
         </ul>
         </li>
     </ul>
