--- a/cit230/index.html
+++ b/cit230/index.html
@@ -72,6 +72,7 @@
        <ul>
             <li><a href="#" target="_blank">Overview</a></li>
             <li><a href="#" target="_blank">Required Readings</a></li>
+            <li><a href="lesson-6/weatherpage/franklin.html">Franklin page</a></li>
        </ul>
        </li>
     </ul>
