--- a/cit230/lesson-6/weatherpage/franklin.html
+++ b/cit230/lesson-6/weatherpage/franklin.html
@@ -9,21 +9,26 @@
   <link rel="stylesheet" href="css/main-5.css">
   <link rel="stylesheet" href="css/medium-5.css">
   <link rel="stylesheet" href="css/large-5.css">
+  <link href="dist/hamburgers.css" rel="stylesheet">
 </head>
 <body>
 
   <header>
   <h2><img src="images/logo.png" alt="logo">Day Out Weather | Franklin</h2>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    	    <button>&#9776</button>
+      </a>
   <nav>
-   <button>&#9776</button>
-    <ul>
+   <div>
+    <ul id="btn" class="topnav">
     	<li><a href="#">Home</a></li>
     	<li><a href="#">Franklin</a></li>
     	<li><a href="#">Greenville</a></li>
     	<li><a href="#">Springfield</a></li>
     	<li><a href="#">Storm Center</a></li>
     	<li><a href="#">Gallery</a></li>
-    </ul>		
+    </ul>
+    </div>		
   </nav>
   </header>
 
@@ -36,10 +41,15 @@
         <p>High: 86&deg;</p>  
         <p>Low: 64&deg;</p>  
       </div>
+      <figure class=".rimage">
+          <img src="images/srcsetimage.jpg"
+               srcset="images/srcsetimage400.jpg 600w,
+                       images/srcsetimage600.jpg 1024w,
+                       images/srcsetimage1000.jpg 1600w" alt="responsive photo">
+      </figure>
       <div class="current">
         Sunny
         <picture>
-            <img src="images/#" alt="">
         </picture>
       </div>   
       <div class="conditions">
@@ -105,5 +115,6 @@
     </section>
   </footer>
   <script src="scripts/script.js"></script>
+  <script src="scripts/hamburger.js"></script>
 </body>
 </html>
