--- a/index.html
+++ b/index.html
@@ -22,62 +22,7 @@
     <section>
     <div class="content-wrap">
     <h2>CIT 270</h2>
-    <h3>Homework links</h3>
-    <div class="blocking-large">
-    <ul>
-        <li>Lesson 1:
-        <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063095/View" target="_blank">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063120/View" target="_blank">Required Readings</a></li>
-        </ul> 
-        </li>
-    </ul>
-    <ul>
-        <li>Lesson 2:
-        <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063094/View" target="_blank">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063123/View" target="_blank">Required Readings</a></li>
-        </ul>
-        </li>
-    </ul>
-    <ul>
-       <li>Lesson 3:
-       <ul>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063143/View" target="_blank">Overview</a></li>
-            <li><a href="https://byui.brightspace.com/d2l/le/content/433305/viewContent/6063173/View" target="_blank">Required Readings</a></li>
-            <li><a href="cit230/fixedhtml.html">Html page fixed</a>
-       </ul>
-       </li>
-    </ul>
-        </div>
-    <div class="blocking-small">
-    <ul>
-        <li>Lesson 4:
-        <ul>
-            <li><a href="#" target="_blank">Overview</a></li>
-            <li><a href="#" target="_blank">Required Readings</a></li>
-        </ul> 
-        </li>
-    </ul>
-    <ul>
-        <li>Lesson 5:
-        <ul>
-            <li><a href="#" target="_blank">Overview</a></li>
-            <li><a href="#" target="_blank">Required Readings</a></li>
-        </ul>
-        </li>
-    </ul>
-    <ul>
-       <li>Lesson 6:
-       <ul>
-            <li><a href="#" target="_blank">Overview</a></li>
-            <li><a href="#" target="_blank">Required Readings</a></li>
-       </ul>
-       </li>
-    </ul>
-        </div>
-    </div>
-    </section>
+    <p>Go to school page for lesson links</p>
 </body>
 <footer>
    <h2>Let's keep in touch</h2>
