--- a/cit230/index.html
+++ b/cit230/index.html
@@ -76,6 +76,13 @@
        </ul>
        </li>
     </ul>
+    <ul>
+        <li>Lesson 8:
+        <ul>
+            <li><a href="lesson-8/tablebuild.html">Table build</a></li>
+        </ul>
+        </li>
+    </ul>
         </div>
     </section>
     
