form added to school page

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -45,8 +45,6 @@
        </ul>
        </li>
     </ul>
-        </div>
-    <div class="blocking-small">
     <ul>
         <li>Lesson 4:
         <ul>
@@ -58,6 +56,8 @@
         </ul> 
         </li>
     </ul>
+        </div>
+    <div class="blocking-small">
     <ul>
         <li>Lesson 5:
         <ul>
@@ -80,7 +80,12 @@
         <li>Lesson 8:
         <ul>
             <li><a href="lesson-8/tablebuild.html">Table build</a></li>
+            <li><a href="lesson-8/storm.html">Storm Center</a></li>
         </ul>
+        </li>
+    </ul>
+    <ul>
+        <li>Lesson 9:
         </li>
     </ul>
         </div>
