css and thankyou page added

--- a/cit230/lesson-8/storm.html
+++ b/cit230/lesson-8/storm.html
@@ -82,6 +82,10 @@
                 <input type="radio" name="danger">No<br>
                 <input type="radio" name="danger">Maybe<br>
             </div>
+            <div>
+                <label for="comments">Any additional comments?</label>
+                <input type="textarea">
+            </div>
                 <input type="submit" value="Submit" class="submit">
             </form>
         </main>
