--- a/cit230/lesson-8/thankyoupage.html
+++ b/cit230/lesson-8/thankyoupage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>submission page</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/thankpage.css">
 </head>
 
 <body>
