--- a/cit230/lesson-8/storm.html
+++ b/cit230/lesson-8/storm.html
@@ -84,7 +84,7 @@
             </div>
             <div>
                 <label for="comments">Any additional comments?</label>
-                <input type="textarea">
+                <input type="textarea" rows="4" cols="50">
             </div>
                 <input type="submit" value="Submit" class="submit">
             </form>
