progress on lesson-8

--- a/cit230/lesson-8/storm.html
+++ b/cit230/lesson-8/storm.html
@@ -84,11 +84,18 @@
             </div>
             <div>
                 <label for="comments">Any additional comments?</label>
-                <input type="textarea" rows="20" cols="50">
+                <input type="textarea" id="comments" rows="20" cols="50">
             </div>
                 <input type="submit" value="Submit" class="submit">
             </form>
         </main>
+        <footer>
+             <h2>Let's keep in touch</h2>
+                 <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
+                 <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
+                 <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
+             <p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
+        </footer>
         <script src="scripts/hamburger.js"></script>
         <script src="scripts/script.js"></script>
     </body>
