--- a/cit230/lesson-8/thankyoupage.html
+++ b/cit230/lesson-8/thankyoupage.html
@@ -4,10 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>submission page</title>
-    <link rel="stylesheet" href="css/thankpage.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main-5.css">
+    <link rel="stylesheet" href="css/medium-5.css">
+    <link rel="stylesheet" href="css/large-5.css">
 </head>
-
-<body>
-    <h1>Thank you! Your form was submitted successfully.</h1>
-</body>
+      <header>
+      <h2><img src="images/logo.png" alt="logo">Day Out Weather | Storm Center</h2>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      <nav>
+       <div>
+        <ul id="btn" class="topnav">
+            <li><a href="..//weatherpage/index.html">Home</a></li>
+            <li><a href="#">Franklin</a></li>
+            <li><a href="#">Greenville</a></li>
+            <li><a href="#">Springfield</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
+        </ul>
+        </div>		
+      </nav>
+      </header>
+      <body>
+          <h1>Thank you! Your form was submitted successfully.</h1>
+      <footer>
+          <h2>Let's keep in touch</h2>
+          <a href="taylor-bailey@live.com" target="_blank">Taylor-bailey@live.com</a>
+          <a href="https://www.facebook.com/profile.php?id=100009128855680" target="_blank">Facebook</a>
+          <a href="https://twitter.com/Taylorbailey525" target="_blank">Twitter</a>
+          <p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
+      </footer>
+      </body>
+      
 </html>
