--- a/cit230/lesson-6/weatherpage/franklin.html
+++ b/cit230/lesson-6/weatherpage/franklin.html
@@ -21,7 +21,7 @@
   <nav>
    <div>
     <ul id="btn" class="topnav">
-    	<li><a href="#">Home</a></li>
+    	<li><a href="">Home</a></li>
     	<li><a href="#">Franklin</a></li>
     	<li><a href="#">Greenville</a></li>
     	<li><a href="#">Springfield</a></li>
