--- a/cit230/index.html
+++ b/cit230/index.html
@@ -77,6 +77,13 @@
        </li>
     </ul>
     <ul>
+        <li>Lesson 7:
+        <ul>
+            <li><a href="lesson-7/franklin.html">Franklin with Flexbox</a></li>
+        </ul>
+        </li>
+    </ul>
+    <ul>
         <li>Lesson 8:
         <ul>
             <li><a href="lesson-8/tablebuild.html">Table build</a></li>
