--- a/cit230/lesson-7/franklin.html
+++ b/cit230/lesson-7/franklin.html
@@ -64,47 +64,51 @@
     <section class="forecast">
       <h3>Ten Day Forecast</h3>
       <table>
-        <thead>
+        <thead class="tableHead-flex">
           <tr>
-            <th>Day 1</th>
-            <th>Day 2</th>
-            <th>Day 3</th>
-            <th>Day 4</th>
-            <th>Day 5</th>
-            <th>Day 6</th>
-            <th>Day 7</th>
-            <th>Day 8</th>
-            <th>Day 9</th>
-            <th>Day 10</th>
+            <th class="forecast-day">Day 1</th>
+            <th class="forecast-day">Day 2</th>
+            <th class="forecast-day">Day 3</th>
+            <th class="forecast-day">Day 4</th>
+            <th class="forecast-day">Day 5</th>
+            <th class="forecast-day">Day 6</th>
+            <th class="forecast-day">Day 7</th>
+            <th class="forecast-day">Day 8</th>
+            <th class="forecast-day">Day 9</th>
+            <th class="forecast-day">Day 10</th>
           </tr>
 	</thead>
-        <tbody>  
+        <tbody class="tableBody-flex">  
           <tr>
-            <td>89&deg;F</td>
-            <td>87&deg;F</td>
-            <td>78&deg;F</td>
-            <td>75&deg;F</td>
-            <td>72&deg;F</td>
-            <td>72&deg;F</td>
-            <td>79&deg;F</td>
-            <td>83&deg;F</td>
-            <td>85&deg;F</td>
-            <td>89&deg;F</td>
+            <td class="forecast-deg">89&deg;F</td>
+            <td class="forecast-deg">87&deg;F</td>
+            <td class="forecast-deg">78&deg;F</td>
+            <td class="forecast-deg">75&deg;F</td>
+            <td class="forecast-deg">72&deg;F</td>
+            <td class="forecast-deg">72&deg;F</td>
+            <td class="forecast-deg">79&deg;F</td>
+            <td class="forecast-deg">83&deg;F</td>
+            <td class="forecast-deg">85&deg;F</td>
+            <td class="forecast-deg">89&deg;F</td>
           </tr>
 	</tbody>
       </table>
     </section>
-      
-    <article>
-      <h3>Franklin Breaks Record</h3>
-      <div class="town-article">	
-         <img src="images/cold%20weather.jpg">
-         <h4>Franklin has record low tempratures in 2017/2018 winter</h4>
-         <p>
-         </p>
-      </div>
-    </article>		  
-  
+    <section>  
+        <h3>Franklin Breaks Record</h3>
+        <article class="article-flex">
+          <div class="town-article">	
+             <img src="images/cold%20weather.jpg">
+             <h4>Franklin has record low tempratures in 2017/2018 winter</h4>
+             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam elit, ultrices sed quam et, imperdiet ornare nisl. Morbi quis posuere turpis...</p>
+          </div>
+          <div class="town-article">	
+             <img src="images/article-2.jpg">
+             <h4>Franklin has record low tempratures in 2017/2018 winter</h4>
+             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam elit, ultrices sed quam et, imperdiet ornare nisl. Morbi quis posuere turpis...</p>
+          </div>
+        </article>		  
+    </section>
   </main>
     
   <footer>
