--- a/cit230/lesson-7/franklin.html
+++ b/cit230/lesson-7/franklin.html
@@ -25,7 +25,7 @@
               <li><a class="navFlex-item" href="#">Greenville</a></li>
               <li><a class="navFlex-item" href="#">Springfield</a></li>
               <li><a class="navFlex-item" href="#">Storm Center</a></li>
-              <li><a class="navFlex-item" href="#">Gallery</a></li>
+              <li><a class="navFlex-item" href="gallery.html">Gallery</a></li>
           </ul>
       </div>		
       </nav>
