--- a/cit230/lesson-7/gallery.html
+++ b/cit230/lesson-7/gallery.html
@@ -5,19 +5,31 @@
         <meta name="description" content="weather">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <title>Weather | Gallery</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <header>
             <h1><a href="index.html"><img src="images/logo.png" alt="logo" class="photo">Day Out Weather</a></h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="franklin.html">Franklin</a>
-                <a href="greenville.html">Greenville</a>
-                <a href="springfield.html">Springfield</a>
-                <a href="storm.html">Storm Center</a>
-                <a href="gallery.html">Gallery</a>
+               <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="franklin.html">Franklin</a></li>
+                <li><a href="greenville.html">Greenville</a></li>
+                <li><a href="springfield.html">Springfield</a></li>
+                <li><a href="storm.html">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+               </ul>
             </nav>
         </header>
+        <main>
+            <div class="container">
+               <img class="grid-item" src="images/image1.jpg" alt="1">
+               <img class="grid-item" src="images/image2.jpg" alt="2">
+               <img class="grid-item" src="images/image3.jpg" alt="3">
+               <img class="grid-item" src="images/image4.jpg" alt="4">
+               <img class="grid-item" src="images/image5.jpg" alt="5">
+               <img class="grid-item" src="images/image6.jpg" alt="6">
+            </div>
+        </main>
     </body>
 </html>
