--- a/cit230/index.html
+++ b/cit230/index.html
@@ -80,6 +80,7 @@
         <li>Lesson 7:
         <ul>
             <li><a href="lesson-7/franklin.html">Franklin with Flexbox</a></li>
+            <li><a href="lesson-7/gallery.html">Gallery</a></li>
         </ul>
         </li>
     </ul>
